--- a/viewer_with_legend_gray_new.html
+++ b/viewer_with_legend_gray_new.html
@@ -273,24 +273,56 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     const ROTATE_SPEED = 1.0;
     const ZOOM_SPEED = 0.0016;
 
-    function applyTrackballRotation(dx, dy){
+    // ✅ 关键改动：用“绕世界Z轴的Yaw + 俯仰Pitch”的轨道相机方式
+    // 这样你画圈(回到起点)时，Yaw/Pitch 的总增量会回到0，视角会严格回到起点（不会出现“转不满360°”）
+    const WORLD_UP = new THREE.Vector3(0,0,1);
+    const tmpOff = new THREE.Vector3();
+    let orbitRadius = 1;
+    let orbitYaw = 0;    // 绕 Z
+    let orbitPitch = 0;  // 抬头/低头
+
+    const PITCH_EPS = 1e-3; // 避免正好到 ±90° 的奇异点
+
+    function syncOrbitFromCamera(){
+      tmpOff.copy(camera.position).sub(rotatePivot);
+      orbitRadius = Math.max(1e-6, tmpOff.length());
+
+      const xy = Math.hypot(tmpOff.x, tmpOff.y);
+      orbitPitch = Math.atan2(tmpOff.z, xy);        // [-pi/2, pi/2]
+      orbitYaw   = Math.atan2(tmpOff.x, tmpOff.y);  // 以 +Y 为 0 度，绕 Z
+    }
+
+    function applyOrbitToCamera(){
+      const cp = Math.cos(orbitPitch);
+      const sp = Math.sin(orbitPitch);
+      const sy = Math.sin(orbitYaw);
+      const cy = Math.cos(orbitYaw);
+
+      const x = orbitRadius * sy * cp;
+      const y = orbitRadius * cy * cp;
+      const z = orbitRadius * sp;
+
+      camera.position.set(rotatePivot.x + x, rotatePivot.y + y, rotatePivot.z + z);
+      camera.up.copy(WORLD_UP);
+      camera.lookAt(rotatePivot);
+      camera.updateMatrixWorld();
+    }
+
+    function applyOrbitDelta(dx, dy){
       const el = renderer.domElement;
       const w = el.clientWidth || 1;
       const h = el.clientHeight || 1;
 
-      const ax = (-dx / w) * Math.PI * 2 * ROTATE_SPEED;
-      const ay = (-dy / h) * Math.PI * 2 * ROTATE_SPEED;
+      const dYaw   = (-dx / w) * Math.PI * 2 * ROTATE_SPEED;
+      const dPitch = (-dy / h) * Math.PI * 2 * ROTATE_SPEED;
 
-      const right = new THREE.Vector3(1,0,0).applyQuaternion(camera.quaternion).normalize();
-      const up    = new THREE.Vector3(0,1,0).applyQuaternion(camera.quaternion).normalize();
+      orbitYaw   += dYaw;
+      orbitPitch += dPitch;
 
-      const qYaw   = new THREE.Quaternion().setFromAxisAngle(up, ax);
-      const qPitch = new THREE.Quaternion().setFromAxisAngle(right, ay);
-      const q = qYaw.multiply(qPitch);
+      const maxPitch = Math.PI/2 - PITCH_EPS;
+      orbitPitch = Math.max(-maxPitch, Math.min(maxPitch, orbitPitch));
 
-      camera.position.sub(rotatePivot).applyQuaternion(q).add(rotatePivot);
-      camera.quaternion.premultiply(q);
-      camera.updateMatrixWorld();
+      applyOrbitToCamera();
     }
 
     function applyPan(dx, dy){
@@ -317,6 +349,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
     renderer.domElement.addEventListener('pointerdown', (e)=>{
       if (e.pointerType !== 'mouse') return;
 
+      // 中键：旋转
       if (e.button === 1){
         e.preventDefault(); e.stopPropagation();
         activePointerId = e.pointerId;
@@ -327,9 +360,13 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
 
         rotatePivot.copy(pickPointFromEvent(e));
         orbitTarget.copy(rotatePivot);
+
+        // ✅ 以当前相机姿态同步一份 yaw/pitch/radius（保证拖动“可逆”，回到起点就回到原视角）
+        syncOrbitFromCamera();
         return;
       }
 
+      // 右键：平移
       if (e.button === 2){
         e.preventDefault(); e.stopPropagation();
         activePointerId = e.pointerId;
@@ -349,7 +386,7 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
       const dy = e.clientY - lastY;
       lastX = e.clientX; lastY = e.clientY;
 
-      if (isRotating) applyTrackballRotation(dx, dy);
+      if (isRotating) applyOrbitDelta(dx, dy);
       else if (isPanning) applyPan(dx, dy);
     }, true);
 
@@ -375,14 +412,10 @@ select{min-width:140px} button.primary{background:var(--primary);border-color:va
       const delta = wheelDeltaAcc;
       wheelDeltaAcc = 0;
 
-      // 以“当前 orbitTarget 所在视平面”为缩放参考（不卡）
       const zoomPoint = pickPointOnTargetPlane(wheelClientX, wheelClientY);
       orbitTarget.copy(zoomPoint);
 
-      // deltaY > 0：缩小；deltaY < 0：放大
       let scale = Math.exp(delta * ZOOM_SPEED);
-
-      // 防止触控板/某些鼠标一次 delta 太大导致跳变：限制每帧缩放倍率
       scale = Math.min(1.25, Math.max(0.80, scale));
 
       const v = camera.position.clone().sub(zoomPoint);
